@@ -3,29 +3,77 @@ package com.nancheung.plugins.jetbrains.legadoreader.toolwindow;
 import com.intellij.openapi.actionSystem.ActionManager;
 import com.intellij.openapi.actionSystem.ActionToolbar;
 import com.intellij.openapi.actionSystem.DefaultActionGroup;
-import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.ui.JBColor;
 import com.nancheung.plugins.jetbrains.legadoreader.api.ApiUtil;
 import com.nancheung.plugins.jetbrains.legadoreader.api.dto.BookDTO;
+import com.nancheung.plugins.jetbrains.legadoreader.command.Command;
+import com.nancheung.plugins.jetbrains.legadoreader.command.CommandBus;
+import com.nancheung.plugins.jetbrains.legadoreader.command.CommandType;
+import com.nancheung.plugins.jetbrains.legadoreader.command.payload.SelectBookPayload;
 import com.nancheung.plugins.jetbrains.legadoreader.common.Constant;
-import com.nancheung.plugins.jetbrains.legadoreader.dao.CurrentReadData;
-import com.nancheung.plugins.jetbrains.legadoreader.dao.Data;
+import com.nancheung.plugins.jetbrains.legadoreader.event.PaginationEvent;
+import com.nancheung.plugins.jetbrains.legadoreader.event.ReaderEvent;
+import com.nancheung.plugins.jetbrains.legadoreader.event.ReaderEventListener;
+import com.nancheung.plugins.jetbrains.legadoreader.event.ReadingEvent;
 import com.nancheung.plugins.jetbrains.legadoreader.gui.SettingFactory;
+import com.nancheung.plugins.jetbrains.legadoreader.manager.ReadingSessionManager;
+import com.nancheung.plugins.jetbrains.legadoreader.model.ReadingSession;
+import com.nancheung.plugins.jetbrains.legadoreader.service.IPaginationManager;
+import com.nancheung.plugins.jetbrains.legadoreader.service.PaginationManager;
+import com.nancheung.plugins.jetbrains.legadoreader.storage.AddressHistoryStorage;
+import com.nancheung.plugins.jetbrains.legadoreader.storage.PluginSettingsStorage;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
 import javax.swing.table.TableModel;
+import java.awt.*;
 import java.awt.event.*;
 import java.util.List;
+import java.util.Map;
 import java.util.Vector;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Getter
 public class IndexUI {
 
-    private static final Logger log = Logger.getInstance(IndexUI.class);
+
+    /**
+     * UI 状态枚举
+     */
+    private enum UIState {
+        /**
+         * 初始化状态
+         */
+        INITIALIZED,
+
+        /**
+         * 加载中状态
+         */
+        LOADING,
+
+        /**
+         * 加载成功状态
+         */
+        SUCCESS,
+
+        /**
+         * 加载失败状态
+         */
+        FAILED
+    }
+
+    /**
+     * 当前 UI 状态
+     */
+    private UIState currentState = UIState.INITIALIZED;
 
 
     /**
@@ -93,12 +141,37 @@ public class IndexUI {
 
     public static final DefaultComboBoxModel<String> ADDRESS_HISTORY_BOX_MODEL = new DefaultComboBoxModel<>();
 
-    private static final IndexUI INSTANCE = new IndexUI();
+    /**
+     * 单例实例，延迟初始化避免类加载时访问 Service
+     */
+    private static IndexUI INSTANCE;
+
+    /**
+     * 书架目录（临时存储在内存）
+     * key: author + "#" + name
+     * value: 书籍信息
+     */
+    private Map<String, BookDTO> bookshelf;
+
+    private static final BiFunction<String, String, String> BOOK_MAP_KEY_FUNC = (author, name) -> author + "#" + name;
 
 
     public IndexUI() {
         // 初始化界面设置
         initIndexUI();
+
+        // 订阅阅读事件（使用新的事件系统）
+        ApplicationManager.getApplication()
+                .getMessageBus()
+                .connect()
+                .subscribe(ReaderEventListener.TOPIC, (ReaderEventListener) event -> {
+                    // 使用 pattern matching 处理不同事件
+                    switch (event) {
+                        case ReadingEvent e -> INSTANCE.onReadingEvent(e);
+                        case PaginationEvent e -> INSTANCE.onPaginationEvent(e);
+                        default -> {}
+                    }
+                });
 
         // 初始化使用默认ip刷新书架目录
         refreshBookshelf(bookDTOS -> refreshBookshelfButton.setEnabled(true), throwable -> refreshBookshelfButton.setEnabled(true));
@@ -117,7 +190,11 @@ public class IndexUI {
         CompletableFuture.supplyAsync(ApiUtil::getBookshelf)
                 .thenAccept(books -> {
                     // 保存书架目录信息
-                    Data.setBookshelf(books);
+                    this.bookshelf = books.stream()
+                            .collect(Collectors.toMap(
+                                    book -> BOOK_MAP_KEY_FUNC.apply(book.getAuthor(), book.getName()),
+                                    Function.identity()
+                            ));
                     // 设置书架目录UI
                     setBookshelfUI(books);
 
@@ -125,7 +202,7 @@ public class IndexUI {
                 }).exceptionally(throwable -> {
                     showErrorTips(bookshelfScrollPane, bookshelfErrorTipsPane);
 
-                    if (Data.enableErrorLog) {
+                    if (Boolean.TRUE.equals(PluginSettingsStorage.getInstance().getState().enableErrorLog)) {
                         log.error("获取书架列表失败", throwable.getCause());
                     }
 
@@ -151,8 +228,8 @@ public class IndexUI {
         // 设置书架面板的表格数据格式
         addressHistoryBox.setModel(ADDRESS_HISTORY_BOX_MODEL);
 
-        // 设置书架面板的ip输入框及历史记录
-        setAddressUI();
+        // 注意：不在初始化时调用 setAddressUI()，避免访问 Service
+        // 将在 initAddressHistory() 中延迟调用
 
         // 设置书架面板的表格数据格式
         bookshelfTable.setModel(IndexUI.BOOK_SHELF_TABLE_MODEL);
@@ -163,6 +240,9 @@ public class IndexUI {
         // 创建action bar
         final ActionManager actionManager = ActionManager.getInstance();
         ActionToolbar actionToolbar = actionManager.createActionToolbar(Constant.PLUGIN_TOOL_BAR_ID, (DefaultActionGroup) actionManager.getAction(Constant.PLUGIN_TOOL_BAR_ID), true);
+
+        // 显式设置 TargetComponent，确保 actions 在正确的上下文中更新
+        actionToolbar.setTargetComponent(textBodyPane);
 
         // 将bar添加至ui
         bar.add(actionToolbar.getComponent());
@@ -176,7 +256,7 @@ public class IndexUI {
             // 设置按钮不可点击，防止多次点击
             refreshBookshelfButton.setEnabled(false);
 
-            Data.addAddress(addressTextField.getText());
+            AddressHistoryStorage.getInstance().addAddress(addressTextField.getText());
 
             setAddressUI();
 
@@ -203,35 +283,19 @@ public class IndexUI {
                     return;
                 }
 
-                // 设置正文面板UI
-                initTextBodyUI();
-
                 // 获取当前点击的书籍信息
                 TableModel model = ((JTable) evt.getSource()).getModel();
                 String name = model.getValueAt(row, 0).toString();
                 String author = model.getValueAt(row, 3).toString();
 
-                // 保存当前阅读信息
-                BookDTO book = Data.getBook(author, name);
-                CurrentReadData.setBook(book);
-                CurrentReadData.setBookIndex(book.getDurChapterIndex());
+                // 获取书籍信息
+                BookDTO book = getBook(author, name);
 
-                // 调用API获取章节列表
-                CompletableFuture.supplyAsync(() -> ApiUtil.getChapterList(CurrentReadData.getBook().getBookUrl()))
-                        .thenAccept(bookChapters -> {
-                            // 保存章节列表
-                            CurrentReadData.setBookChapterList(bookChapters);
-
-                            // 设置正文数据
-                            setTextBodyUIData(book.getDurChapterPos());
-                        }).exceptionally(throwable -> {
-                            showErrorTips(textBodyScrollPane, textBodyErrorTipsPane);
-
-                            if (Data.enableErrorLog) {
-                                log.error("获取章节列表失败", throwable.getCause());
-                            }
-                            return null;
-                        });
+                // 加载章节（事件驱动）
+                CommandBus.getInstance().dispatchAsync(Command.of(
+                        CommandType.SELECT_BOOK,
+                        new SelectBookPayload(book, book.getDurChapterIndex())
+                ));
             }
         };
     }
@@ -256,80 +320,18 @@ public class IndexUI {
         }
     }
 
-    /**
-     * 切换章节
-     *
-     * @param durChapterPos 当前在章节中的位置
-     */
-    public void switchChapter(int durChapterPos) {
-        // 设置正文面板UI
-        initTextBodyUI();
-
-        // 设置正文数据
-        setTextBodyUIData(durChapterPos);
-    }
-
-    private void initTextBodyUI() {
-        // 设置正文面板的字体
-        textBodyPane.setForeground(new JBColor(Data.textBodyFontColor, Data.textBodyFontColor));
-        textBodyPane.setFont(Data.textBodyFont);
-        // 设置加载中的提示
-        textBodyPane.setText("加载中...");
-
-        if (!textBodyPanel.isShowing()) {
-            textBodyPanel.setVisible(true);
-            bookshelfPanel.setVisible(false);
-        }
-
-        if (!textBodyScrollPane.isShowing()) {
-            textBodyScrollPane.setVisible(true);
-            textBodyErrorTipsPane.setVisible(false);
-        }
-
-        // 获取焦点到文本框
-        textBodyPane.requestFocus();
-    }
-
-    private void setTextBodyUIData(int durChapterPos) {
-        BookDTO book = CurrentReadData.getBook();
-
-        // 获取章节标题
-        String title = CurrentReadData.getBookChapter().getTitle();
-
-        // 调用API获取正文内容
-        CompletableFuture.supplyAsync(() -> ApiUtil.getBookContent(book.getBookUrl(), CurrentReadData.getBookIndex()))
-                .thenAccept(bookContent -> {
-                    CurrentReadData.setBodyContent(bookContent);
-
-                    // 设置正文内容
-                    textBodyPane.setText(title + "\n" + bookContent);
-                    textBodyPane.setCaretPosition(durChapterPos);
-                }).exceptionally(throwable -> {
-                    showErrorTips(textBodyScrollPane, textBodyErrorTipsPane);
-
-                    if (Data.enableErrorLog) {
-                        log.error("获取正文内容失败", throwable.getCause());
-                    }
-
-                    return null;
-                });
-
-        // 同步阅读进度
-        CompletableFuture.runAsync(() -> ApiUtil.saveBookProgress(book.getAuthor(), book.getName(), CurrentReadData.getBookIndex(), title, durChapterPos));
-    }
-
     private void showErrorTips(JScrollPane textBodyScrollPane, JTextPane textBodyErrorTipsPane) {
         textBodyScrollPane.setVisible(false);
         textBodyErrorTipsPane.setVisible(true);
     }
 
     private void setAddressUI() {
-        List<String> addressHistoryList = Data.getAddressHistory();
+        List<String> addressHistoryList = AddressHistoryStorage.getInstance().getAddressList();
         // 设置书架面板的ip输入框的历史记录
         ADDRESS_HISTORY_BOX_MODEL.removeAllElements();
         ADDRESS_HISTORY_BOX_MODEL.addAll(addressHistoryList);
 
-        if (addressHistoryList.size() == 0) {
+        if (addressHistoryList.isEmpty()) {
             addressHistoryBox.setEnabled(false);
             ADDRESS_HISTORY_BOX_MODEL.addElement("无历史记录");
             return;
@@ -337,8 +339,8 @@ public class IndexUI {
 
         // 设置书架面板的ip输入框
         addressHistoryBox.setEnabled(true);
-        ADDRESS_HISTORY_BOX_MODEL.setSelectedItem(addressHistoryList.get(0));
-        addressTextField.setText(addressHistoryList.get(0));
+        ADDRESS_HISTORY_BOX_MODEL.setSelectedItem(addressHistoryList.getFirst());
+        addressTextField.setText(addressHistoryList.getFirst());
 
     }
 
@@ -346,7 +348,215 @@ public class IndexUI {
         return rootPanel;
     }
 
+    /**
+     * 获取单例实例（懒加载）
+     */
     public static IndexUI getInstance() {
+        if (INSTANCE == null) {
+            INSTANCE = new IndexUI();
+        }
         return INSTANCE;
+    }
+
+    /**
+     * 获取书籍
+     *
+     * @param author 作者
+     * @param name   书名
+     * @return 书籍信息
+     */
+    private BookDTO getBook(String author, String name) {
+        if (bookshelf == null) {
+            return null;
+        }
+        return bookshelf.get(BOOK_MAP_KEY_FUNC.apply(author, name));
+    }
+
+    /**
+     * 初始化地址历史记录
+     * 在 ToolWindow 首次显示时调用，延迟访问 Service
+     */
+    public void initAddressHistory() {
+        setAddressUI();
+    }
+
+    // ==================== 事件驱动的阅读功能 ====================
+
+    /**
+     * 阅读事件分发器
+     * 根据事件状态调用不同的处理方法
+     *
+     * @param event 阅读事件
+     */
+    public void onReadingEvent(ReadingEvent event) {
+        // 确保在 EDT 线程中执行 UI 更新
+        ApplicationManager.getApplication().invokeLater(() -> {
+            switch (event.type()) {
+                case CHAPTER_LOADING -> handleLoadingStarted(event);
+                case CHAPTER_LOADED -> handleLoadingSuccess(event);
+                case CHAPTER_LOAD_FAILED -> handleLoadingFailed(event);
+                case SESSION_ENDED -> handleSessionEnded();
+            }
+        });
+    }
+
+    /**
+     * 处理"会话结束"事件
+     * 返回书架，清空正文显示
+     */
+    private void handleSessionEnded() {
+        currentState = UIState.INITIALIZED;
+
+        log.info("会话结束，返回书架");
+
+        // 显示书架面板
+        bookshelfPanel.setVisible(true);
+        textBodyPanel.setVisible(false);
+
+        // 清空正文内容
+        textBodyPane.setText("");
+    }
+
+    /**
+     * 处理分页事件
+     * 当翻页时，同步更新正文面板的光标位置
+     *
+     * @param event 分页事件
+     */
+    private void onPaginationEvent(PaginationEvent event) {
+        // 确保在 EDT 线程中执行 UI 更新
+        ApplicationManager.getApplication().invokeLater(() -> {
+            // 只处理页码变更事件（PAGE_CHANGED）
+            if (event.type() != PaginationEvent.PaginationEventType.PAGE_CHANGED) {
+                return;
+            }
+
+            // 如果正文面板不可见，跳过（用户可能在书架）
+            if (!textBodyPanel.isVisible() || !textBodyScrollPane.isVisible()) {
+                log.debug("正文面板不可见，跳过光标同步");
+                return;
+            }
+
+            // 获取当前页数据
+            PaginationManager paginationManager = PaginationManager.getInstance();
+            IPaginationManager.PageData currentPage = paginationManager.getCurrentPage();
+
+            if (currentPage == null || currentPage.startPos() < 0) {
+                log.warn("分页事件但无当前页数据或起始位置无效");
+                return;
+            }
+
+            // 获取当前阅读会话以获取标题
+            ReadingSession session = ReadingSessionManager.getInstance().getSession();
+            if (session == null || session.currentContent() == null) {
+                log.debug("无当前阅读会话，跳过光标同步");
+                return;
+            }
+
+            // 计算标题长度（标题 + 换行符）
+            String title = session.chapters().get(session.currentChapterIndex()).getTitle();
+            int titleLength = (title != null && !title.isEmpty()) ? title.length() + 1 : 0;
+
+            // 计算光标位置
+            int caretPosition = titleLength + currentPage.startPos();
+
+            // 限制在有效范围内
+            String currentText = textBodyPane.getText();
+            caretPosition = Math.min(caretPosition, currentText.length());
+
+            // 设置光标位置
+            textBodyPane.setCaretPosition(caretPosition);
+
+            // 滚动到光标位置（确保光标可见）
+            try {
+                Rectangle viewRect = textBodyPane.modelToView2D(caretPosition).getBounds();
+                textBodyPane.scrollRectToVisible(viewRect);
+            } catch (javax.swing.text.BadLocationException e) {
+                log.debug("滚动到光标位置失败: {}", e.getMessage());
+            }
+
+            log.debug("光标同步完成：页码 {}/{}, 光标位置 {}",
+                    event.currentPage(), event.totalPages(), caretPosition);
+        });
+    }
+
+    /**
+     * 处理"开始加载"事件
+     * UI 进入加载中状态，显示加载提示
+     *
+     * @param event 阅读事件
+     */
+    private void handleLoadingStarted(ReadingEvent event) {
+        currentState = UIState.LOADING;
+
+        log.info("UI 进入加载状态: book={}, chapterIndex={}",
+                event.book().getName(), event.chapter().getIndex());
+
+        // 显示正文面板
+        if (!textBodyPanel.isShowing()) {
+            textBodyPanel.setVisible(true);
+            bookshelfPanel.setVisible(false);
+        }
+
+        // 隐藏错误提示
+        if (!textBodyScrollPane.isShowing()) {
+            textBodyScrollPane.setVisible(true);
+            textBodyErrorTipsPane.setVisible(false);
+        }
+
+        // 设置加载提示
+        textBodyPane.setText("加载中...");
+
+        // 获取焦点
+        textBodyPane.requestFocus();
+    }
+
+    /**
+     * 处理"加载成功"事件
+     * UI 进入成功状态，显示章节内容
+     *
+     * @param event 阅读事件
+     */
+    private void handleLoadingSuccess(ReadingEvent event) {
+        currentState = UIState.SUCCESS;
+
+        log.info("UI 加载成功: book={}, chapter={}",
+                event.book().getName(), event.chapter().getTitle());
+
+        // 设置正文字体样式
+        Color fontColor = PluginSettingsStorage.getInstance().getTextBodyFontColor();
+        textBodyPane.setForeground(new JBColor(fontColor, fontColor));
+        textBodyPane.setFont(PluginSettingsStorage.getInstance().getTextBodyFont());
+
+        // 设置正文内容
+        String title = event.chapter().getTitle();
+        String content = event.content();
+        textBodyPane.setText(title + "\n" + content);
+
+        // 设置光标位置
+        textBodyPane.setCaretPosition(event.chapterPosition());
+    }
+
+    /**
+     * 处理"加载失败"事件
+     * UI 进入失败状态，显示错误提示
+     *
+     * @param event 阅读事件
+     */
+    private void handleLoadingFailed(ReadingEvent event) {
+        currentState = UIState.FAILED;
+
+        log.warn("UI 加载失败: book={}, chapterIndex={}, error={}",
+                event.book().getName(),
+                event.chapter().getIndex(),
+                event.error() != null ? event.error().getMessage() : "Unknown");
+
+        // 显示错误提示
+        showErrorTips(textBodyScrollPane, textBodyErrorTipsPane);
+
+        // 记录详细错误日志
+        if (Boolean.TRUE.equals(PluginSettingsStorage.getInstance().getState().enableErrorLog)) {
+            log.error("章节加载失败", event.error());
+        }
     }
 }
